--- a/main.css
+++ b/main.css
@@ -8,10 +8,11 @@
 }
 body {
 	margin: 0;
-	background-color: #000;
-	color: #fff;
-	font-family: Monospace;
-	font-size: 13px;
+	background-color: rgb(167, 223, 222);
+	color: #000;
+	overflow: hidden;
+    font-size: .8em;
+    font-family: 'Fjalla One',sans-serif;
 	line-height: 24px;
 	overscroll-behavior: none;
 }
@@ -90,3 +91,99 @@ a, button, input, select {
 	margin-top: 20px;
 	padding: 10px;
 }
+
+.button {
+	z-index:2;
+	text-align: center;
+	vertical-align: middle;
+	background-color: #000;
+	position: absolute;
+	border: 1px solid #fff;
+}
+
+#openPackageButton {
+	position: absolute;
+	width: 461.59px;
+	height: 101.71px;
+	left: calc(50% - 230.8px);
+	bottom: 28px;
+	border: 2px solid #A7DFDE;
+	border-radius: 5px;
+}
+
+#backButton {
+	position: absolute;
+	width: 255px;
+	height: 105px;
+	left: 21px;
+	bottom: 28px;
+	border: 2px solid #A7DFDE;
+	box-sizing: border-box;
+	filter: drop-shadow(0px 4px 26px rgba(0, 0, 0, 0.04));
+	border-radius: 4px;
+	background-color: #0000;
+	display: none;
+}
+
+.blockInButton {
+	position: absolute;
+	left: 4.91px;
+	right: 4.91px;
+	top: 4.85px;
+	bottom: 4.86px;
+	background: #FFFFFF;
+	box-shadow: 0px 4px 26px rgba(0, 0, 0, 0.04);
+	border-radius: 4px;
+}
+
+#openPackageButton .blockInButton span {
+	position: absolute;
+	width: 297px;
+	height: 57px;
+	left: 117.12px;
+	top: 17.5px;
+	
+	font-family: Segma;
+	font-style: normal;
+	font-weight: 600;
+	font-size: 42px;
+	line-height: 57px;
+	text-align: center;
+	color: #020828;
+}
+
+#openPackageButton .blockInButton img {
+	position: absolute;
+	left: 28.67px;
+	top: 26.25px;
+	bottom: 25.7px;
+	/*border: 6px solid #A7DFDE;
+	/*transform: rotate(-90deg);*/
+}
+
+#backButton .blockInButton span {
+	position: absolute;
+	left: 42.76%;
+	right: 17.65%;
+	top: 20.11%;
+	bottom: 25.64%;
+	font-family: Segma;
+	font-style: normal;
+	font-weight: 500;
+	font-size: 42px;
+	line-height: 57px;
+	text-align: center;
+	color: #020828;
+}
+
+#backButton .blockInButton img {
+	position: absolute;
+	left: 35.44px;
+	right: 160.72px;
+	top: 32.41px;
+	bottom: 34.16px;
+	/*border: 6px solid #A7DFDE;
+	/*transform: rotate(-90deg);*/
+}
+
+
