--- a/main.css
+++ b/main.css
@@ -186,4 +186,48 @@ a, button, input, select {
 	/*transform: rotate(-90deg);*/
 }
 
+#prepareButton {
+	position: absolute;
+	width: 130px;
+	height: 50px;
+	left: calc(50% - 65px);
+	bottom: 5px;
+	border: 2px solid #A7DFDE;
+	box-sizing: border-box;
+	filter: drop-shadow(0px 4px 26px rgba(0, 0, 0, 0.04));
+	border-radius: 4px;
+	background-color: #0000;
+	display: none;
+}
+
+#prepareButton .blockInButton span {
+	position: absolute;
+	/*left: 42.76%;*/
+	right: 5px;
+	top: 20.11%;
+	bottom: 25.64%;
+	font-family: Segma;
+	font-style: normal;
+	font-weight: 600;
+	font-size: 21px;
+	line-height: 25px;
+	text-align: center;
+	color: #020828;
+}
+
+#prepareButton .blockInButton img {
+	position: absolute;
+	left: 10px;
+	height: 20px;
+	top: 10px;
+	/*border: 6px solid #A7DFDE;
+	/*transform: rotate(-90deg);*/
+}
+
+.annotationLabel {
+	color: #ffffff;
+	font-family: monospace;
+	pointer-events: none;
+	font-size: 17px;
+}
 
