--- a/main.css
+++ b/main.css
@@ -109,6 +109,7 @@ a, button, input, select {
 	bottom: 5px;
 	border: 2px solid #A7DFDE;
 	border-radius: 5px;
+	display: none;
 }
 
 #backButton {
@@ -231,3 +232,40 @@ a, button, input, select {
 	font-size: 17px;
 }
 
+#loaderPage
+{
+	position: absolute;
+	background-color: #FFFFFF;
+	width:100%;
+	height:100%;
+	display: block;
+}
+
+#loaderPage span {
+	position: absolute;
+	top: calc(50% + 30px);
+	font-size: 21px;
+	width: 200px;
+	left: calc(50% - 90px);
+	text-align: center;
+}
+
+#loaderPage img {
+	position: inherit;
+	bottom: calc(50% + 30px);
+	width: 400px;
+	left: calc(50% - 200px);
+}
+
+#progressBar {
+	position: absolute;
+	background-color: #EEEEEE;
+	top: 50%;
+	width: 100%;
+	height: 15px;
+}
+#progress {
+	width: 1%;
+	height: 100%;
+	background-color: #A7DFDE;
+}
