--- a/main.css
+++ b/main.css
@@ -235,3 +235,72 @@ a, button, input, select {
 	padding: 2px;
 	height: 60px;
 }
+
+#fullscrin {
+	position: absolute;
+	width: 230px;
+	height: 300px;
+	left: calc(50% - 115px);
+	top: calc(50% - 150px);
+	background-color: #ffffff;
+	border: 2px solid #A7DFDE;
+	box-sizing: border-box;
+	filter: drop-shadow(0px 4px 26px rgba(0, 0, 0, 0.04));
+	border-radius: 4px;
+	text-align: center;
+	font-size: 21px;
+}
+
+#fullscrin span {
+	position: absolute;
+	width: 100%;
+	height: 30px;
+	left: 0px;
+	top: 50px;
+	
+	/*font-family: Segma;*/
+	font-style: normal;
+	font-weight: 600;
+	font-size: 21px;
+	line-height: 22px;
+	text-align: center;
+	/*color: #020828;*/
+}
+#fullscrin #yesFull {
+	position: absolute;
+	width: 100px;
+	height: 40px;
+	left: 10px;
+	bottom: 10px;
+	border: 2px solid #A7DFDE;
+	box-sizing: border-box;
+	filter: drop-shadow(0px 4px 26px rgba(0, 0, 0, 0.04));
+	border-radius: 4px;
+}
+
+#fullscrin #noFull {
+	position: absolute;
+	width: 100px;
+	height: 40px;
+	right: 10px;
+	bottom: 10px;
+	border: 2px solid #A7DFDE;
+	box-sizing: border-box;
+	filter: drop-shadow(0px 4px 26px rgba(0, 0, 0, 0.04));
+	border-radius: 4px;
+}
+
+#yesFull span, #noFull span {
+	position: absolute;
+	width: 100%;
+	height: 30px;
+	left: 0px;
+	top: 5px;
+	
+	font-style: normal;
+	font-weight: 600;
+	font-size: 21px;
+	line-height: 22px;
+	text-align: center;
+
+}
