--- a/main.css
+++ b/main.css
@@ -29,6 +29,14 @@
 }
 
 @font-face {
+    font-family: 'Gilroy-Medium';
+    src:
+        url('fonts/Gilroy/Gilroy-Medium.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
 	font-family: 'Segma-semi';
 	font-style: normal;
 	font-weight: normal;
@@ -50,7 +58,7 @@ body {
 	color: #000;
 	overflow: hidden;
     font-size: .8em;
-    font-family: 'Segma', sans-serif;
+    font-family: 'Gilroy-Medium', sans-serif;
 	font-style: normal;
 	font-weight: normal;
 	line-height: 24px;
@@ -86,9 +94,9 @@ a, button, input, select {
 
 #openPackageButton {
 	position: absolute;
-	width: 230px;
+	width: 160px;
 	height: 50px;
-	left: calc(50% - 115px);
+	left: calc(50% - 80px);
 	bottom: 5px;
 	border: 2px solid #A7DFDE;
 	border-radius: 5px;
@@ -97,7 +105,7 @@ a, button, input, select {
 
 #backButton {
 	position: absolute;
-	width: 125px;
+	width: 135px;
 	height: 50px;
 	left: 10px;
 	bottom: 5px;
@@ -122,7 +130,7 @@ a, button, input, select {
 
 #openPackageButton .blockInButton span {
 	position: absolute;
-	width: 170px;
+	width: 100px;
 	height: 40px;
 	right: 10px;
 	top: 5px;
@@ -157,9 +165,9 @@ a, button, input, select {
 
 #prepareButton {
 	position: absolute;
-	width: 160px;
+	width: 230px;
 	height: 50px;
-	left: calc(50% - 80px);
+	left: calc(50% - 115px);
 	bottom: 5px;
 	border: 2px solid #A7DFDE;
 	box-sizing: border-box;
@@ -177,7 +185,7 @@ a, button, input, select {
 	font-style: normal;
 	font-weight: 600;
 	font-size: 21px;
-	line-height: 30px;
+	line-height: 25px;
 	text-align: center;
 	color: #020828;
 }
@@ -240,8 +248,7 @@ a, button, input, select {
 	top: 20px;
 	left: 20px;
 	display: none;
-	font-family: 'Segma-semi';
-	line-height: 3em;
+	line-height: 30px;
 }
 .post_info img {
 	width: 300px;
@@ -249,20 +256,28 @@ a, button, input, select {
 	left: 0%;
 	opacity: 0.7;
 }
-.post_info span {
+
+.post_annotation {
 	color: #FFFFFF;
-	font-size: 50px;
+	font-weight: 700;
+	font-size: 20px;
+	line-height: 24px;
+}
+
+.post_header {
+	color: #FFFFFF;
+	font-size: 28px;
+	font-weight: 700;
 }
 .label {
-	font-family: sans-serif;
 	padding: 2px;
 	height: 60px;
 }
 
 @media (max-width: 600px) {
 	#prepareButton {
-		right: 10px;
-		left: auto;
+		left: 10px;
+		bottom: 60px;
 	}
 }
 	
